pbc_contract_codegen/tests/action/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.stderr
error[E0308]: mismatched types
  --> tests/action/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:17:1
   |
17 | #[zk_on_secret_input(shortname = 0x04)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected struct `ZkState`, found `u32`
   | expected due to this
   |
   = note: expected struct `ZkState<_>`
                found type `u32`
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/action/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:17:1
   |
17 | #[zk_on_secret_input(shortname = 0x04)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found struct `ZkState`
18 | fn do_zk_on_secret_input(
   |    --------------------- arguments to this function are incorrect
   |
   = note: expected type `u32`
            found struct `ZkState<_>`
note: function defined here
  --> tests/action/fail/zk/arg_instead_of_zk_state_zk_on_secret_input.rs:18:4
   |
18 | fn do_zk_on_secret_input(
   |    ^^^^^^^^^^^^^^^^^^^^^
...
21 |     arg1: u32,
   |     ---------
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)
